Fix: Show white space when mouseout in destination section

--- a/css/main.css
+++ b/css/main.css
@@ -601,7 +601,7 @@ strong {
 
 .message h2::before {
   position: absolute;
-  bottom: 0;
+  bottom: -20px;
   left: 0;
   content: "";
   width: 0;
